# chess-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  docker-compose.yml  sqlx-data.json
.github/workflows/: release.yml
.sqlx/: query-23d4c50e8ab680cfae4e58339f560e9e24f08f4a53fbbe9cd2945d43fa7c235c.json  query-956dc3a49df4925b9597b47ad3fb52fba0a2d8ba0b9dcb277205185886ad983d.json  query-aabf41d5ee333c6f04adc2074626f6a1ebe137b63404d460ef234d753541dd7a.json  query-d59285a0cb11d71e182fdc72a33bf662e81a918f5ebacec48b68022c3f370c7f.json  query-df7793e70f0a887b3fc26e223bbca47d9fbffab019bb524ab7f09d490f623b1a.json
migrations/: 20221225212932_starboard.sql  20230526115400_announcement.sql
src/: config.rs  create_starboard_message.rs  error.rs  main.rs  rss_announcements.rs
src/error/: application.rs  config.rs  database.rs  discord.rs  event.rs  mod.rs  reaction.rs  rss.rs
src/events/: mod.rs  reaction_add.rs
