[package]
name = "chess-bot"
description = "A bot to manage the <Chess /> Discord server"
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.6"
error-stack = "0.2.4"
feed-rs = "1.3.0"
futures = "0.3.25"
reqwest = "0.11.18"
sqlx = { version = "0.6.2", features = [
	"sqlite",
	"runtime-tokio-rustls",
	"offline",
] }
tokio = { version = "1.22.0", features = ["full"] }
twilight-cache-inmemory = "0.14.0"
twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-model = "0.14"
