[package]
name = "chess-bot"
description = "A bot to manage the <Chess /> Discord server"
version = "1.1.2"
edition = "2021"

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.6"
env_logger = "0.10.0"
error-stack = "0.3.1"
feed-rs = "1.3.0"
futures = "0.3.25"
log = "0.4.19"
reqwest = { version = "0.11.18", default-features = false, features = [
	"rustls-tls",
] }
sqlx = { version = "0.6.2", features = [
	"sqlite",
	"runtime-tokio-rustls",
	"offline",
] }
tokio = { version = "1.22.0", features = ["full"] }
twilight-cache-inmemory = "0.15.2"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
