[package]
name = "chess-bot"
description = "A bot to manage the <Chess /> Discord server"
version = "1.1.8"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dotenvy = "0.15.7"
env_logger = "0.10.0"
error-stack = "0.4.1"
feed-rs = "1.3.0"
futures = "0.3.28"
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = [
	"rustls-tls",
] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
